--- a/source-code/app/src/main/res/layout/tutorial_layout.xml
+++ b/source-code/app/src/main/res/layout/tutorial_layout.xml
@@ -26,7 +26,7 @@
         android:scaleType="centerInside" />
 
     <Button
-        android:text="Skip tutorial."
+        android:text="@string/skip_tutorial"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
